--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,4 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Photo is taken : ./Photos19_09_17_05_44_38.png</td></tr>
-<tr><td>CDwindow-55be6d35-9b1a-4227-8d89-912bda3172cf</td></tr>
-<tr><td>CDwindow-53d20a5f-c82c-4237-b13b-56dfcc00e404</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
